--- a/diamondjourney.html
+++ b/diamondjourney.html
@@ -64,7 +64,7 @@
                             <img src="img/cart.png" class="perHdImg">
                         </a>
                     </div>
-                    <div class="perIcon">
+                     <div class="perIcon searchBoxAll">
                         <img src="img/search.png" class="perHdImg">
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Gift a diamond</a>
+                        <a class="nav-link" href="./gift.html">Gift a diamond</a>
                     </li>
                 </ul>
             </div>
@@ -136,27 +136,97 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-sm-12 col-md-12">
+    <div class="container margin-Bottom_diamond">
+        <div class="largeImgBox-diamond toprelativeDiamond">
+            <div class="diamondLargeImage">
                 <img src="img/other/image-1.png" class="img-fluid">
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12 diamondLeft_box">
-                <div class="diamondTxt-box smallPara-dimndBox">
-                    <p class="fs-2">
-                        Sorting <br>
-                        Rough <br>
-                        Diamonds
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12 diamondRight_box">
-                <div class="diamond-small-img">
-                    <img src="img/other/image-2.png" class="img-fluid">
+                <div class="diamondLarge-Imf-txt1">
+                    <p class="fs-2">Mining</p>
+                    <p>Priceless treasures of nature - diamonds are
+                        formed under volcanic mountains, found on the
+                        river bed and at times unearthed from the seashore. But not all match your unparalleled
+                        brilliance. We scavenge the best mines of Ghana,
+                        Kimberley and Dominoes to choose the stones
+                        that emanate the most spell-binding lustre.</p>
                 </div>
             </div>
         </div>
     </div>
+
+    <section class="diamondSmallConatainer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 col-sm-12 diamondLeft_box margin-Bottom_diamond">
+                    <div class="diamondTxt-box smallPara-dimndBox">
+                        <div class="diamondbox-MarAuto">
+                            <p class="fs-2 pb-4">
+                                Sorting <br>
+                                Rough <br>
+                                Diamonds
+                            </p>
+                            <p>Before a raw diamond is processed, it
+                                resembles dull pieces of glass. These
+                                raw diamonds are taken to processing
+                                plants and are sorted into categories
+                                according to weight, colour and clarity.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 diamondRight_box margin-Bottom_diamond">
+                    <div class="diamond-small-img">
+                        <img src="img/other/image-2.png" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="container margin-Bottom_diamond">
+        <div class="largeImgBox-diamond bottomrelativeDiamond">
+            <div class="diamondLargeImage">
+                <img src="img/other/image-3.png" class="img-fluid">
+                <div class="diamondLarge-Imf-txt2">
+                    <p class="fs-2">Cleaving & polishing
+                        of rough diamonds</p>
+                    <p>After separating rough diamonds to be
+                        finished separately, the crucial step of
+                        polishing is efficiently executed in our
+                        polishing factory in Gujarat.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <section class="diamondSmallConatainer downSmallDiamondRelative">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 col-sm-12 diamondLeft_box margin-Bottom_diamond">
+                    <div class="diamondTxt-box2 smallPara-dimndBox">
+                        <div class="diamondbox-MarAuto">
+                            <p class="fs-2">
+                                Inspection <br>
+                                of Polished <br>
+                                diamonds
+                            </p>
+                            <p>After the final facets are polished onto
+                                the diamond by a brillianteer, the
+                                diamonds undergo a meticulous
+                                inspection using a 10x loop that
+                                qualifies the measure of matching the
+                                4Cs (Colour, Carat, Cut and Clarity.)
+                                and thereafter receives its official lab
+                                certifications.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 diamondRight_box margin-Bottom_diamond">
+                    <div class="diamond-small-img">
+                        <img src="img/other/image-4.png" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <div class="footer">
         <div class="footerCont pt-5 pb-5 container">
@@ -168,7 +238,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="footerLinks">
-                        <a href="#">Our story</a>
+                        <a href="./ourstory.html">Our story</a>
                     </div>
                     <div class="footerLinks">
                         <a href="./diamondjourney.html">Journey of a Diamond</a>
@@ -177,7 +247,7 @@
                         <a href="./contactus.html">Contact us</a>
                     </div>
                     <div class="footerLinks">
-                        <a href="#">Request for a call back</a>
+                        <a href="./callback.html">Request for a call back</a>
                     </div>
                     <div class="footerLinks">
                         <a href="#">Download brochure</a>
@@ -190,17 +260,19 @@
                     </div>
                     <div class="fbInstFtr mt-5 mb-3">
                         <span class="perFTrSclImg">
-                            <a href="#">
+                            <a href="https://www.facebook.com/kolkataindia123" target="_blank">
                                 <img src="img/facebook.png">
                             </a>
                         </span>
                         <span class="perFTrSclImg">
-                            <a href="#">
+                            <a href="https://www.instagram.com/chiragjewellersindia" target="_blank">
+
                                 <img src="img/instagram.png">
                             </a>
                         </span>
                         <span class="perFTrSclImg">
-                            <a href="#">
+                                                       <a href="https://twitter.com/chiragjeweller3?t=t4x9nFTxmnNkpdr0a2MQJw&s=08" target="_blank">
+
                                 <img src="img/twiter.png">
                             </a>
                         </span>
