--- a/orderplaced.html
+++ b/orderplaced.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chirag - Sign up</title>
-
+    <title>Chirag - Order Placed</title>
     <!-- fontawsome  -->
     <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
 
@@ -20,7 +18,6 @@
     <!-- custom  -->
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="wholeHeader headerNotHomeWhole" id="wholeHeader">
         <div class="upperHeader">
@@ -104,7 +101,6 @@
             </div>
         </div>
     </div>
-
     <div class="loadingImgBox" id="loadingImgBox">
         <div class="loadingImg">
             <img src="img/other/wheel-animation.gif">
@@ -115,71 +111,19 @@
         <div class="all-Img-Btn text-center">
             <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
             <div class="allimgBtnbox">
-                <p class="wishlistHead">Sign up</p>
+                <p class="wishlistHead">
+                    We can't  <span class="sliderAlFnt">thank you</span> enough
+                </p>
             </div>
             <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
         </div>
-    </div>
+        <p class="pt-4 placeOrderpara text-center">Thank you for placing your order. It is our privilege to embellish you <br> and your loved ones 
+            with our diamond jewellery. 
+            We shall send you an email to inform <br> you about the status of your order once it is shipped</p>
 
-    <div class="container mb-5">
-        <div class="signUpIn">
-            <div class="signUpInContent">
-                <form>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Name:
-                        </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Mobile:
-                        </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Email Id:
-                        </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Password:
-                        </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt"></div>
-                        <div class="TextInptSUpIn">
-                           <input type="checkbox"> <span class="CheckboxMsg"> I agree to receive promotional SMS, Emails, Whatsapp.</span>
-                        </div>
-                    </div>
-                    <div class="sinUpBtn text-end">
-                        <button class="btns" type="submit" disabled="true">Sign up</button>
-                    </div>
-                </form>
-
-                <div class="alternateSignBox mt-5 text-center">
-                    <div class="altSigncontent">
-                        <span class="txtFadedAll">Already registered? </span>
-                        <button class="btns">
-                            <a href="./signin.html">
-                                Sign In
-                            </a>
-                        </button>
-                    </div>
-                </div>
+            <div class="placeOrderBtn text-center">
+                <button class="btns">Discover more</button>
             </div>
-        </div>
     </div>
 
     <div class="footer">
@@ -294,5 +238,4 @@
         });
     </script>
 </body>
-
 </html>
