--- a/ourstory.html
+++ b/ourstory.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chirag - Sign up</title>
+    <title>Chirag - Our story</title>
 
     <!-- fontawsome  -->
     <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
@@ -104,83 +104,123 @@
             </div>
         </div>
     </div>
-
     <div class="loadingImgBox" id="loadingImgBox">
         <div class="loadingImg">
             <img src="img/other/wheel-animation.gif">
         </div>
     </div>
 
+    <!-- story  -->
+    <div class="container text-center mt-5 txtFadedAll">
+        <h2 class="allHeading mb-5">
+            Unearthing the story of a
+            <span class="sliderAlFnt">billion year old</span>
+            shine
+        </h2>
+        <div class="storyDownPara mb-5">
+            <p class="story-Para-txt">
+                Most of us are familiar with the phrase, <span class="story-span">"shine like a diamond." </span> But
+                few know about the technicality
+                that lies behind the brilliant shine <br>
+                of a diamond. Besides refraction, it is the phenomenon of internal reflection that
+                contributes to the
+                brilliance of a diamond. And more the <br>
+                cuts of a diamond, more is the internal reflection that further adds to the shine of a diamond.
+            </p>
+            <p class="story-Para-txt">
+                And at <span class="story-span">
+                    Chirag Jewellers - founded in 1972 by late Rameshchandra Shah in Kolkata
+                </span> - every diamond is
+                meticulously carved and <br>
+                cut with precision, adding brilliance not only to the diamond but also to the wearer. Our master
+                craftsmen meticulously carve each piece of <br>
+                diamond with precision matching the standards of GIA and IGI in terms of Cut, Clarity and Colour.
+            </p>
+        </div>
+    </div>
+
+
     <div class="container mt-5 mb-5">
         <div class="all-Img-Btn text-center">
             <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-            <div class="allimgBtnbox">
-                <p class="wishlistHead">Sign up</p>
+            <div class="story-dot d-flex">
+                <div></div>
+                <div></div>
             </div>
             <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
         </div>
     </div>
 
-    <div class="container mb-5">
-        <div class="signUpIn">
-            <div class="signUpInContent">
-                <form>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Name:
-                        </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Mobile:
-                        </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Email Id:
-                        </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Password:
-                        </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt"></div>
-                        <div class="TextInptSUpIn">
-                           <input type="checkbox"> <span class="CheckboxMsg"> I agree to receive promotional SMS, Emails, Whatsapp.</span>
-                        </div>
-                    </div>
-                    <div class="sinUpBtn text-end">
-                        <button class="btns" type="submit" disabled="true">Sign up</button>
-                    </div>
-                </form>
+    <div class="container text-center txtFadedAll">
+        <h2 class="allHeading mb-5">
+            A Chirag
+            <span class="sliderAlFnt">Promise</span>
+        </h2>
 
-                <div class="alternateSignBox mt-5 text-center">
-                    <div class="altSigncontent">
-                        <span class="txtFadedAll">Already registered? </span>
-                        <button class="btns">
-                            <a href="./signin.html">
-                                Sign In
-                            </a>
-                        </button>
+        <p class="story-para-txt">
+            Chirag Jewellers, founded in 1972 with an operational philosophy to serve a customer with honesty and
+            sincerity, has developed today as the city's <br>
+            foremost authority on the subject of selecting and purchasing diamond jewellery. Continuous innovation as
+            well as a progressive and an enthusiastic <br>
+            spirit has helped us to achieve outstanding standards of professionalism along with a special emphasis on
+            three key elements
+        </p>
+
+        <div class="row">
+            <div class="col-lg-3 col-md-2 col-sm-12"></div>
+            <div class="col-lg-6 col-md-8 col-sm-12 mb-4">
+                <div class="container mt-5 mb-1">
+                    <div class="all-Img-Btn text-center">
+                        <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+                        <div class="allimgBtnbox">
+                            <p class="storyImg-head">Customer Based</p>
+                        </div>
+                        <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
                     </div>
                 </div>
+                <p>Neither the sales amount nor the profit margin is our primary concern. Instead, we 
+                    focus on having satisfied customers. We strongly believe that a repeat client is 
+                    the cornerstone of any meaningful and successful business. We constantly strive 
+                    to improve ourselves to serve the changing needs of our clients.</p>
             </div>
+            <div class="col-lg-3 col-md-2 col-sm-12"></div>
+            <div class="col-lg-3 col-md-2 col-sm-12"></div>
+            <div class="col-lg-6 col-md-8 col-sm-12 mb-4">
+                <div class="container mb-1">
+                    <div class="all-Img-Btn text-center">
+                        <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+                        <div class="allimgBtnbox">
+                            <p class="storyImg-head">Good valued products </p>
+                        </div>
+                        <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+                    </div>
+                </div>
+                <p>It is been our primary endeavour since years that we cater to our customers by 
+                    providing only good valued products .To meet this requirement, we exercise the 
+                    most stringent quality control measures. Our diamonds achieve a clarity of VVS or 
+                    Very fine VS1 and are graded EF (G+) which is clean and nearly colourless.</p>
+            </div>
+            <div class="col-lg-3 col-md-2 col-sm-12"></div>
+            <div class="col-lg-3 col-md-2 col-sm-12"></div>
+            <div class="col-lg-6 col-md-8 col-sm-12 mb-5">
+                <div class="container mb-1">
+                    <div class="all-Img-Btn text-center">
+                        <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+                        <div class="allimgBtnbox">
+                            <p class="storyImg-head">Service oriented</p>
+                        </div>
+                        <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+                    </div>
+                </div>
+                <p>We understand that good-valued products alone will not result in satisfied and 
+                    repeat customers. Hence, every member of our concern is always ready to serve a 
+                    customer to his total satisfaction with a view to establishing a long-term mutual 
+                    beneficial relationship</p>
+            </div>
+            <div class="col-lg-3 col-md-2 col-sm-12"></div>
         </div>
     </div>
+
 
     <div class="footer">
         <div class="footerCont pt-5 pb-5 container">
