--- a/callback.html
+++ b/callback.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chirag - Sign up</title>
+    <title>Chirag - Call back request</title>
 
-    <!-- fontawsome  -->
-    <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
+     <!-- fontawsome  -->
+     <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
 
-    <!-- bootstrap  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
-    <!-- custom  -->
-    <link rel="stylesheet" href="style.css">
+     <!-- bootstrap  -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+         crossorigin="anonymous"></script>
+ 
+     <!-- custom  -->
+     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="wholeHeader headerNotHomeWhole" id="wholeHeader">
         <div class="upperHeader">
@@ -64,7 +62,7 @@
                             <img src="img/cart.png" class="perHdImg">
                         </a>
                     </div>
-                     <div class="perIcon searchBoxAll">
+                    <div class="perIcon searchBoxAll">
                         <img src="img/search.png" class="perHdImg">
                     </div>
                 </div>
@@ -104,24 +102,23 @@
             </div>
         </div>
     </div>
-
     <div class="loadingImgBox" id="loadingImgBox">
         <div class="loadingImg">
             <img src="img/other/wheel-animation.gif">
         </div>
     </div>
 
-    <div class="container mt-5 mb-5">
+    <div class="container mt-5 mb-5 callBackSubmit">
         <div class="all-Img-Btn text-center">
             <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
             <div class="allimgBtnbox">
-                <p class="wishlistHead">Sign up</p>
+                <p class="wishlistHead">Submit your details</p>
             </div>
             <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
         </div>
     </div>
 
-    <div class="container mb-5">
+    <div class="container mb-5 callBackMain">
         <div class="signUpIn">
             <div class="signUpInContent">
                 <form>
@@ -149,38 +146,35 @@
                             <input type="text">
                         </div>
                     </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Password:
-                        </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt"></div>
-                        <div class="TextInptSUpIn">
-                           <input type="checkbox"> <span class="CheckboxMsg"> I agree to receive promotional SMS, Emails, Whatsapp.</span>
-                        </div>
-                    </div>
                     <div class="sinUpBtn text-end">
-                        <button class="btns" type="submit" disabled="true">Sign up</button>
-                    </div>
-                </form>
-
-                <div class="alternateSignBox mt-5 text-center">
-                    <div class="altSigncontent">
-                        <span class="txtFadedAll">Already registered? </span>
-                        <button class="btns">
-                            <a href="./signin.html">
-                                Sign In
+                        <button class="btns" id="callBackSubmit" type="submit">
+                            <a href="#">
+                                Submit
                             </a>
                         </button>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
+
+    <div class="container callBackMsg mt-5">
+        <div class="all-Img-Btn text-center">
+            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+            <div class="allimgBtnbox">
+                <p class="wishlistHead">
+                    <span class="sliderAlFnt">thank you</span> for your query
+                </p>
+            </div>
+            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+        </div>
+        <p class="pt-4 text-center" style="font-size: 20px;">We will get back to you within 3 working days.</p>
+
+            <div class="placeOrderBtn text-center mt-4 mb-5">
+                <button class="btns">Discover more</button>
+            </div>
+    </div>
+
 
     <div class="footer">
         <div class="footerCont pt-5 pb-5 container">
@@ -292,7 +286,19 @@
             position ? headerImg2Js.style.display = 'block' : headerImg2Js.style.display = 'none';
 
         });
+
+        let callBackSubmit = document.getElementById('callBackSubmit');
+        callBackSubmit.addEventListener('click', (e)=>{
+            e.preventDefault();
+            let callBackMain = document.querySelector('.callBackMain');
+            let callBackSubmit = document.querySelector('.callBackSubmit');
+            callBackMain.style.display = 'none';
+            callBackSubmit.style.display = 'none';
+            
+            let callBackMsg = document.querySelector('.callBackMsg');
+            callBackMsg.style.display = 'block';
+        })
+        
     </script>
 </body>
-
 </html>
