--- a/checkout.html
+++ b/checkout.html
@@ -64,7 +64,7 @@
                             <img src="img/cart.png" class="perHdImg">
                         </a>
                     </div>
-                    <div class="perIcon">
+                     <div class="perIcon searchBoxAll">
                         <img src="img/search.png" class="perHdImg">
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Gift a diamond</a>
+                        <a class="nav-link" href="./gift.html">Gift a diamond</a>
                     </li>
                 </ul>
             </div>
@@ -380,7 +380,11 @@
                 </div>
                 <div class="col-lg-3 col-md-2 col-sm-12"></div>
                 <div class="placeOrderCheckout col-lg-3 col-md-3 col-sm-12 text-end">
-                    <button class="btns">Place Order</button>
+                    <button class="btns">
+                        <a href="./orderplaced.html">
+                            Place Order
+                        </a>
+                    </button>
                 </div>
             </div>
         </div>
@@ -397,7 +401,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="footerLinks">
-                        <a href="#">Our story</a>
+                        <a href="./ourstory.html">Our story</a>
                     </div>
                     <div class="footerLinks">
                         <a href="./diamondjourney.html">Journey of a Diamond</a>
@@ -406,7 +410,7 @@
                         <a href="./contactus.html">Contact us</a>
                     </div>
                     <div class="footerLinks">
-                        <a href="#">Request for a call back</a>
+                        <a href="./callback.html">Request for a call back</a>
                     </div>
                     <div class="footerLinks">
                         <a href="#">Download brochure</a>
@@ -419,17 +423,19 @@
                     </div>
                     <div class="fbInstFtr mt-5 mb-3">
                         <span class="perFTrSclImg">
-                            <a href="#">
+                            <a href="https://www.facebook.com/kolkataindia123" target="_blank">
                                 <img src="img/facebook.png">
                             </a>
                         </span>
                         <span class="perFTrSclImg">
-                            <a href="#">
+                            <a href="https://www.instagram.com/chiragjewellersindia" target="_blank">
+
                                 <img src="img/instagram.png">
                             </a>
                         </span>
                         <span class="perFTrSclImg">
-                            <a href="#">
+                                                       <a href="https://twitter.com/chiragjeweller3?t=t4x9nFTxmnNkpdr0a2MQJw&s=08" target="_blank">
+
                                 <img src="img/twiter.png">
                             </a>
                         </span>
