--- a/ring.html
+++ b/ring.html
@@ -74,7 +74,7 @@
                             <img src="img/cart.png" class="perHdImg">
                         </a>
                     </div>
-                    <div class="perIcon">
+                     <div class="perIcon searchBoxAll">
                         <img src="img/search.png" class="perHdImg">
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Gift a diamond</a>
+                        <a class="nav-link" href="./gift.html">Gift a diamond</a>
                     </li>
                 </ul>
             </div>
@@ -139,11 +139,11 @@
     </div> -->
 
 
-    <!-- <div class="sortingAll mt-5">
+    <div class="sortingAll mt-5">
         <div class="container">
             <div class="sorting-content">
                 <div class="right-Sorting">
-                    <div class="perSortingBox">
+                    <!-- <div class="perSortingBox">
                         <span class="slectSrtDown"><i class="fas fa-sort-down"></i></span>
                         <select name="material" id="material" style="min-width: 83px;">
                             <option value="Material" selected>Material</option>
@@ -177,7 +177,7 @@
                             <option value="gender" selected>Gender</option>
                             <option value="M1">M1</option>
                         </select>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="left-Sorting">
                     <div class="perSortingBox">
@@ -190,7 +190,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <section class="ring-product mt-3 mb-5">
         <div class="container">
@@ -681,7 +681,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="footerLinks">
-                        <a href="#">Our story</a>
+                        <a href="./ourstory.html">Our story</a>
                     </div>
                     <div class="footerLinks">
                         <a href="./diamondjourney.html">Journey of a Diamond</a>
@@ -690,7 +690,7 @@
                         <a href="./contactus.html">Contact us</a>
                     </div>
                     <div class="footerLinks">
-                        <a href="#">Request for a call back</a>
+                        <a href="./callback.html">Request for a call back</a>
                     </div>
                     <div class="footerLinks">
                         <a href="#">Download brochure</a>
@@ -703,17 +703,19 @@
                     </div>
                     <div class="fbInstFtr mt-5 mb-3">
                         <span class="perFTrSclImg">
-                            <a href="#">
+                            <a href="https://www.facebook.com/kolkataindia123" target="_blank">
                                 <img src="img/facebook.png">
                             </a>
                         </span>
                         <span class="perFTrSclImg">
-                            <a href="#">
+                            <a href="https://www.instagram.com/chiragjewellersindia" target="_blank">
+
                                 <img src="img/instagram.png">
                             </a>
                         </span>
                         <span class="perFTrSclImg">
-                            <a href="#">
+                                                       <a href="https://twitter.com/chiragjeweller3?t=t4x9nFTxmnNkpdr0a2MQJw&s=08" target="_blank">
+
                                 <img src="img/twiter.png">
                             </a>
                         </span>
