--- a/ourstory.html
+++ b/ourstory.html
@@ -110,6 +110,20 @@
         </div>
     </div>
 
+    <div class="serachCliked_box">
+        <div class="serachInput_content">
+            <div class="search_cross text-center mb-4" id="search_cross">
+                <i class="fas fa-times"></i>
+            </div>
+            <div class="relativeSearch">
+                <input type="text">
+                <span class="searchInput_img">
+                    <img src="img/other/search.png">
+                </span>
+            </div>
+        </div>
+    </div>
+
     <!-- story  -->
     <div class="container text-center mt-5 txtFadedAll">
         <h2 class="allHeading mb-5">
@@ -139,6 +153,26 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-1 col-md-12 col-sm-12"></div>
+            <div class="col-lg-10 col-md-12 col-sm-12 txtFadedAll text-center story_upper_box">
+                <div class="all-Img-Btn text-center">
+                    <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+                    <div>
+                        <p class="m-0 story_relative_box story-span">The diamond proportion followed:</p>
+                    </div>
+                    <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+                </div>
+                <div class="story_box">
+                    <p class="m-0">
+                        l Table: Around 57 to 60 cuts <span class="story_golden_line">|</span> l Crown angle: Around 13 to 15.5 degree <span class="story_golden_line">|</span> l Depth: 62.8 degree
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-1 col-md-12 col-sm-12"></div>
+        </div>
+    </div>
 
     <div class="container mt-5 mb-5">
         <div class="all-Img-Btn text-center">
@@ -265,7 +299,7 @@
                             </a>
                         </span>
                         <span class="perFTrSclImg">
-                                                       <a href="https://twitter.com/chiragjeweller3?t=t4x9nFTxmnNkpdr0a2MQJw&s=08" target="_blank">
+                                                       <a href="https://twitter.com/chiragjeweller3" target="_blank">
 
                                 <img src="img/twiter.png">
                             </a>
@@ -275,7 +309,7 @@
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="NewLetrSub">
                         <div class="newLtrText cust-medium-font mb-3">
-                            Subscribe to our newsletter for special
+                           Sign up to receive exclusive offers and news
                         </div>
                         <div class="inputBtn">
                             <div>
