--- a/ring.html
+++ b/ring.html
@@ -120,6 +120,20 @@
         </div>
     </div>
 
+    <div class="serachCliked_box">
+        <div class="serachInput_content">
+            <div class="search_cross text-center mb-4" id="search_cross">
+                <i class="fas fa-times"></i>
+            </div>
+            <div class="relativeSearch">
+                <input type="text">
+                <span class="searchInput_img">
+                    <img src="img/other/search.png">
+                </span>
+            </div>
+        </div>
+    </div>
+
 
     <div class="ring-banner">
         <img src="img/ring/slide.png" class="img-fluid">
@@ -714,7 +728,7 @@
                             </a>
                         </span>
                         <span class="perFTrSclImg">
-                                                       <a href="https://twitter.com/chiragjeweller3?t=t4x9nFTxmnNkpdr0a2MQJw&s=08" target="_blank">
+                                                       <a href="https://twitter.com/chiragjeweller3" target="_blank">
 
                                 <img src="img/twiter.png">
                             </a>
@@ -724,7 +738,7 @@
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="NewLetrSub">
                         <div class="newLtrText cust-medium-font mb-3">
-                            Subscribe to our newsletter for special
+                           Sign up to receive exclusive offers and news
                         </div>
                         <div class="inputBtn">
                             <div>
