--- a/xyz.html
+++ b/xyz.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chirag - Call back request</title>
+    <title>Chirag - product another</title>
 
-     <!-- fontawsome  -->
-     <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
+    <!-- fontawsome  -->
+    <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
 
-     <!-- bootstrap  -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-         crossorigin="anonymous"></script>
- 
-     <!-- custom  -->
-     <link rel="stylesheet" href="style.css">
+    <!-- bootstrap  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <!-- custom  -->
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="wholeHeader headerNotHomeWhole" id="wholeHeader">
         <div class="upperHeader">
@@ -102,11 +104,13 @@
             </div>
         </div>
     </div>
+
     <div class="loadingImgBox" id="loadingImgBox">
         <div class="loadingImg">
             <img src="img/other/wheel-animation.gif">
         </div>
     </div>
+
     <div class="serachCliked_box">
         <div class="serachInput_content">
             <div class="search_cross text-center mb-4" id="search_cross">
@@ -120,73 +124,118 @@
             </div>
         </div>
     </div>
-
-    <div class="container mt-5 mb-5 callBackSubmit">
-        <div class="all-Img-Btn text-center">
-            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-            <div class="allimgBtnbox">
-                <p class="wishlistHead">Submit your details</p>
-            </div>
-            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
-        </div>
-    </div>
-
-    <div class="container mb-5 callBackMain">
-        <div class="signUpIn">
-            <div class="signUpInContent">
-                <form>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Name:
+    <section class="productDetails mt-5 mb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="prodDetUImg">
+                        <img src="img/xyz/thumb-2.png" id="Product-Imge-Main">
+                    </div>
+                    <div class="other-product-of-prodDet otherProd_not_overflow pt-2">
+                        <div class="prod-det-other2" id="0">
+                            <img src="img/xyz/thumb1.png" class="img-fluid">
                         </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
+                        <div class="prod-det-other2" id="1">
+                            <img src="img/xyz/thumb-2.png" class="img-fluid">
                         </div>
                     </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Mobile:
-                        </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="perSignUpIn mb-3">
-                        <div class="perSUpInTxt">
-                            Email Id:
-                        </div>
-                        <div class="perInputSUpIn">
-                            <input type="text">
-                        </div>
-                    </div>
-                    <div class="sinUpBtn text-end">
-                        <button class="btns" id="callBackSubmit" type="submit">
-                            <a href="#">
-                                Submit
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 prodDetleftBox">
+                    <div class="headerIcon mt-4">
+                        <div class="perIcon">
+                            <a href="./wishlist.html">
+                                <img src="img/fav.png" class="perHdImg">
                             </a>
-                        </button>
+                        </div>
+                        <div class="perIcon">
+                            <a href="./cart.html">
+                                <img src="img/cart.png" class="perHdImg">
+                            </a>
+                        </div>
                     </div>
-                </form>
+                    <p class="prodDetLargetxt txtFadedAll mb-0 mt-5">
+                        Emerald Cut Diamond
+                    </p>
+                    <div class="smlTxtprodDet txtFadedAll mb-0">Rs. 204,000.00</div>
+                    <p class="smallTxtNewProd mb-3 txtFadedAll">
+                        Product code : xxxxxxxx
+                    </p>
+                    <div class="another_prod_table d-flex">
+                        <div class="another_first_table txtFadedAll">
+                            <table>
+                                <tr class="another_prod_tr shadedTr_another">
+                                    <td class="another_prod_td">SHAPE:</td>
+                                    <td class="another_prod_td">Round</td>
+                                </tr>
+                                <tr class="another_prod_tr">
+                                    <td class="another_prod_td">CARAT:</td>
+                                    <td class="another_prod_td">17.44</td>
+                                </tr>
+                                <tr class="another_prod_tr">
+                                    <td class="another_prod_td">COLOUR:</td>
+                                    <td class="another_prod_td">D</td>
+                                </tr>
+                                <tr class="another_prod_tr">
+                                    <td class="another_prod_td">CLARITY:</td>
+                                    <td class="another_prod_td">VVS1</td>
+                                </tr>
+                                <tr class="another_prod_tr">
+                                    <td class="another_prod_td">CUT:</td>
+                                    <td class="another_prod_td">V.Good</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="another_second_table txtFadedAll">
+                            <table>
+                                <tr class="another_prod_tr">
+                                    <td class="another_prod_td">POLISH:</td>
+                                    <td class="another_prod_td">V.Good</td>
+                                </tr>
+                                <tr class="another_prod_tr">
+                                    <td class="another_prod_td">SYMMETRY:</td>
+                                    <td class="another_prod_td">V.Good</td>
+                                </tr>
+                                <tr class="another_prod_tr">
+                                    <td class="another_prod_td">CERT:</td>
+                                    <td class="another_prod_td">IGI</td>
+                                </tr>
+                                <tr class="another_prod_tr">
+                                    <td class="another_prod_td">FLUOR:</td>
+                                    <td class="another_prod_td">Faint</td>
+                                </tr>
+                                <tr class="another_prod_tr">
+                                    <td class="another_prod_td">CERT. NO.</td>
+                                    <td class="another_prod_td">211056M</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="prodDetSize mt-4 txtFadedAll">
+                        <div class="prodDetQty mt-2">
+                            <div class="qtyTxt">
+                                Qty:
+                            </div>
+                            <div class="QtyChange-box">
+                                <span id="ProdDetQtyNum">1</span>
+                                <span class="QtyLogoProdDet"><i class="fas fa-sort-down"></i></span>
+                            </div>
+                        </div>
+                        <div class="prodDetaiButton mt-4">
+                            <div class="PerProdDet-button">
+                                <button class="btns">Wishlist</button>
+                            </div>
+                            <div class="PerProdDet-button">
+                                <button class="btns">Add to cart</button>
+                            </div>
+                            <div class="PerProdDet-button">
+                                <button class="btns">Buy now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-
-    <div class="container callBackMsg mt-5">
-        <div class="all-Img-Btn text-center">
-            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-            <div class="allimgBtnbox">
-                <p class="wishlistHead">
-                    <span class="sliderAlFnt">thank you</span> for your query
-                </p>
-            </div>
-            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
-        </div>
-        <p class="pt-4 text-center" style="font-size: 20px;">We will get back to you within 3 working days.</p>
-
-            <div class="placeOrderBtn text-center mt-4 mb-5">
-                <button class="btns">Discover more</button>
-            </div>
-    </div>
+    </section>
 
 
     <div class="footer">
@@ -227,13 +276,11 @@
                         </span>
                         <span class="perFTrSclImg">
                             <a href="https://www.instagram.com/chiragjewellersindia" target="_blank">
-
                                 <img src="img/instagram.png">
                             </a>
                         </span>
                         <span class="perFTrSclImg">
-                                                       <a href="https://twitter.com/chiragjeweller3" target="_blank">
-
+                            <a href="https://twitter.com/chiragjeweller3" target="_blank">
                                 <img src="img/twiter.png">
                             </a>
                         </span>
@@ -242,7 +289,7 @@
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="NewLetrSub">
                         <div class="newLtrText cust-medium-font mb-3">
-                           Sign up to receive exclusive offers and news
+                            Sign up to receive exclusive offers and news
                         </div>
                         <div class="inputBtn">
                             <div>
@@ -287,6 +334,7 @@
         <img src="img/top-1.png">
     </div>
     <script src="logic.js"></script>
+
     <script>
         window.addEventListener('scroll', () => {
             let wholeHeader = document.querySelector('.wholeHeader');
@@ -300,18 +348,29 @@
 
         });
 
-        let callBackSubmit = document.getElementById('callBackSubmit');
-        callBackSubmit.addEventListener('click', (e)=>{
-            e.preventDefault();
-            let callBackMain = document.querySelector('.callBackMain');
-            let callBackSubmit = document.querySelector('.callBackSubmit');
-            callBackMain.style.display = 'none';
-            callBackSubmit.style.display = 'none';
-            
-            let callBackMsg = document.querySelector('.callBackMsg');
-            callBackMsg.style.display = 'block';
-        })
-        
+        // let ProdImgId = document.getElementById('Product-Imge-Main');
+        // let imgArr = ['img/ring/product-1.png', 'img/ring/product-2.png', 'img/ring/product-3.png', 'img/ring/product-4.png', 'img/ring/product-2.png', 'img/ring/product-3.png'];
+        // function ProdDetailImgChange(id){
+        //     imgArr.forEach((e,i)=>{
+        //         if(id == i){
+        //             ProdImgId.src = e;
+        //         }
+        //     });
+        // }
+
+        // let ProdSizeBtn = document.querySelectorAll('.ProdSizeBtn');
+        // ProdSizeBtn.forEach((elem)=>{
+        //     elem.addEventListener('click', ()=>{
+        //         ProdSizeBtn.forEach((elem2)=>{
+        //             if(elem != elem2){
+        //                 elem2.classList.remove('active');
+        //             }
+        //         })
+        //         elem.classList.add('active');
+        //     })
+        // });
     </script>
+
 </body>
+
 </html>
